.provarCaches/00Df2000001KKNJEA4/objects/FileLInk__File_Upload_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>FileLInk__API_Key__c</fullName>
        <label>API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileLInk__Config_JSON__c</fullName>
        <label>Config JSON</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FileLInk__Is_Default__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FileLInk__Mime_Types_Json__c</fullName>
        <label>Mime Types Json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FileLInk__Private_Key__c</fullName>
        <label>Private Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileLInk__Service__c</fullName>
        <label>Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cloudinary</fullName>
                    <default>true</default>
                    <label>Cloudinary</label>
                </value>
                <value>
                    <fullName>Salesforce Files</fullName>
                </value>
                <value>
                    <fullName>Azure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FileLInk__URL__c</fullName>
        <label>URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>File Upload Setting</label>
    <pluralLabel>File Upload Settings</pluralLabel>
</CustomObject>